# CotecchioGame

./: CMakeLists.txt  CotecchioGame.sln  CotecchioGame.vcxproj  CotecchioGame.vcxproj.filters  CotecchioSettings.xml  Exercise  Experiments  Lesson20200529  Lesson20200603  Main.cpp  MainChess.cpp  MainTest  MainTest.cpp  MainTextureE2.cpp  MatrixTest  TODOList  test.xml
Animation/: CameraRotation.cpp  CameraRotation.h  CameraTranslation.h  Scripts.cpp  Scripts.h
DATA_ASSETS/: World.xml
DATA_ASSETS/Shader Files/: debug_fragment.glsl  deck_fragment.glsl  deck_vertex.glsl  light_vertex.glsl  offline_fragment.glsl  offline_vertex.glsl  outliner_vertex.glsl  scene_fragment.glsl  scene_vertex.glsl  texture_vertex.glsl
DATA_ASSETS/Table_OBJ/: Table.mtl  Table.xml
Graphics/: GL_Loader.cpp  GL_Loader.h  GL_Loader_Ex1Chess.h  GL_Loader_Ex2Texture.h  GL_RenderVariables.cpp  GL_RenderVariables.h  GL_Renderer.cpp  GL_SceneLoader.cpp  SceneObjects.cpp  SceneObjects.h  Settings.cpp  Settings.h  Shaders.cpp  Shaders.h  fragment.glsl  fragment_texture.glsl  lambert_fragment.glsl  lambert_vertex.glsl  standard_fragment.glsl  standard_vertex.glsl  vertex.glsl  vertex_chess.glsl  vertex_texture.glsl
Graphics/Shader Files/: back_fragment.glsl  cards_fragment.glsl  cards_vertex.glsl  color_fragment.glsl  debug_fragment.glsl  deck_fragment.glsl  deck_vertex.glsl  fragment.glsl  light_vertex.glsl  offline_fragment.glsl  offline_msaa_fragment.glsl  phong_texture_fragment.glsl  phong_texture_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl  velvet_fragment.glsl  velvet_vertex.glsl  vertex.glsl
Graphics/assimp/: IrrXML.exp  IrrXML.lib  assimp-vc142-mt.exp  assimp-vc142-mt.lib  zlib.exp  zlibstatic.lib
IO/ThreadPool/: README.md
IO/lib/header/algorithm/: algorithm.hpp  algorithm_thr.hpp  exchange_endpoint_by_swapping.hpp
IO/lib/header/math/: combination.hpp  math.hpp
IO/lib/header/thread/: Atomic_stack.hpp  CAtomic_stack.hpp  CBasic_ts_container.hpp  CLock_bounded_queue.hpp  CLock_forward_list.hpp  CLock_queue.hpp  CLock_unordered_map.hpp  CLock_unordered_set.hpp  CSemaphore.hpp  CSpin_mutex.hpp  CTask.hpp  CWait_bounded_queue.hpp  Lock_queue.hpp  Node.hpp  tag.hpp
IO/lib/header/tool/: Boolean.hpp  CAlloc_obj.hpp  CInsert_iterator.hpp  CUTF8_reader.hpp  CUnique_obj.hpp
IO/lib/src/: CSpin_mutex.cpp
IO/stb-master/: stb_image.h
Matrix/: FloatArray.cpp  FloatArray.h  Matrix.cpp  Matrix.h  SquareMatrix.cpp  SquareMatrix.h  StandardMatrix.cpp  StandardMatrix.h
Model/: Box.cpp  Box.h  Card.cpp  Card.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Triangle.cpp  Triangle.h
Model/Cards/: Card.cpp  Card.h  Deck.cpp  Deck.h
Model/Light/: Light.cpp  Light.h  OmniLight.cpp  OmniLight.h  SpotLight.cpp  SpotLight.h
Player/: Player.cpp  Player.h
Scripting/: CameraRotation.cpp  CameraRotation.h  CameraTranslation.cpp  CardMoving.cpp  CardMoving.h  Scripts.cpp  Scripts.h
Utilities/: Camera.cpp  Camera.h  Color.cpp  Color.h  Ray.cpp  Ray.h
Utilities/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Vector/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Float4.h  FloatVector.cpp  FloatVector.h
_notProject_Exercises/: Exercise  Lesson20200605  MainChess.cpp  MainTest.cpp  MatrixTest  test.xml  xmlImport
_notProject_Exercises/Graphics/: GL_Loader_Ex1Chess.h  GL_Loader_Ex2Texture.h  fragment_chess.glsl  fragment_texture.glsl
